# 3-python-package-ez-squad-3-0

./: Pipfile  README.md  choose.py  example.py  fight.py  luck_test.py  luckypokemon.py  pikachu_art.py  pokemon_art.py  pokemon_with_battle.py  pypokemon.py  pyproject.toml  select_pokemon.py  test_battle.py  test_functions.py  test_luckypokemon.py  test_show.py
.github/workflows/: build.yaml
pypokemon/: __init__.py  __main__.py  pokemon.py
tests/: test_functions.py  test_pokemon.py  test_pypokemon.py  test_show_pokemon_ascii.py  test_show_pokemon_display.py  test_show_pokemon_stats.py
